# smack

./: README.md  pyproject.toml
src/smack/: smack.py
src/smack.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
